--- a/soulTalk_frontend/src/styles/PublicChatroom.css
+++ b/soulTalk_frontend/src/styles/PublicChatroom.css
@@ -1,4 +1,4 @@
-.card {
+.scard {
   width: 70vw;
   background-color: #f0f0f0; /* Changed background color */
   border: none; /* Removed border */
