--- a/soulTalk_frontend/src/styles/Quiz.css
+++ b/soulTalk_frontend/src/styles/Quiz.css
@@ -23,7 +23,8 @@
     border-radius: 15px;
     padding:20px;
     box-shadow: 10px 10px 42px 0px rgba(0,0,0,0.75);
-
+    display: flex;
+    flex-direction: row;
     margin-top: 20vh;
   }
   .scores-sections
