--- a/soulTalk_frontend/src/styles/Review.css
+++ b/soulTalk_frontend/src/styles/Review.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 :root {
-  --primary-color: #ff226f;
-  --primary-color-dark: #fe6769;
+  --primary-color: #1679ab;
+  --primary-color-dark: #1679ab;
   --text-dark: #333333;
   --white: #ffffff;
 }
