--- a/soulTalk_frontend/src/styles/UpdateProfile.css
+++ b/soulTalk_frontend/src/styles/UpdateProfile.css
@@ -2,13 +2,18 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top:5rem;
   max-width: 350px;
   background-color: #fff;
   padding: 20px;
   border-radius: 20px;
   position: relative;
 }
-
+.header{
+  background-size: cover;
+  height:100vh;
+  overflow:hidden;
+}
 .title {
   font-size: 28px;
   color: royalblue;
