--- a/soulTalk_frontend/src/styles/UserProfile.css
+++ b/soulTalk_frontend/src/styles/UserProfile.css
@@ -1,10 +1,14 @@
 .gradient-custom {
   /* fallback for old browsers */
-  background: #f6d365;
+  background: #1679ab;
 
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
+  background: -webkit-linear-gradient(to right bottom, rgb(22, 121, 171), rgb(49, 152, 152));
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
+  background: linear-gradient(to right bottom, rgb(22, 121, 171), rgb(49, 152, 152))
+}
+.vh-100
+{
+  background-size: cover;
 }
