--- a/soulTalk_frontend/src/styles/psychologist.css
+++ b/soulTalk_frontend/src/styles/psychologist.css
@@ -34,11 +34,12 @@
   font-family: sans-serif;
 }
 
-.title {
+.ttitle {
   font-size: 1.7em;
   font-weight: 900;
   text-align: center;
   margin: 0;
+  padding:0;
 }
 
 .flip-card-inner {
@@ -69,10 +70,10 @@
 }
 
 .flip-card-front {
-  background: linear-gradient(120deg, bisque 60%, rgb(255, 231, 222) 88%,
-     rgb(255, 211, 195) 40%, rgba(255, 127, 80, 0.603) 48%);
+  background: linear-gradient(120deg, #ffffff 60%, rgb(255, 255, 255) 88%,
+  rgb(255, 255, 255) 40%, rgb(255, 255, 255) 48%);
   color: coral;
-  overflow:hidden;
+
 }
 
 .flip-card-back {
@@ -86,5 +87,6 @@
   width: 100%;
   height: 100%;
   object-fit:cover;
+  object-position: center;
   border-radius: 1rem;/* Ensure the image fills the container without distorting its aspect ratio */
 }
