--- a/soulTalk_frontend/src/styles/LogIn.css
+++ b/soulTalk_frontend/src/styles/LogIn.css
@@ -23,3 +23,9 @@
   }
 
 }
+.uploader {
+    background: var(--surface-card);
+    padding: 1rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
